--- a/404.html
+++ b/404.html
@@ -548,7 +548,7 @@
 
 <body cz-shortcut-listen="true">
 
-  <img src="/images/404.jpg" alt="Page Not Found (404)." style="position: absolute; left: 50%; top: 50%; margin-left: -285px; margin-top: -190px;">
+  <img src="./img/404.jpg" alt="Page Not Found (404)." style="position: absolute; left: 50%; top: 50%; margin-left: -285px; margin-top: -190px;">
 
 
 
