--- a/index.html
+++ b/index.html
@@ -1,51 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Gerashchenko</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    </head>
-    <style>
-        .row{
-            height: 200px;
-        }
-
-        .row-1{
-            background-color: #137393;
-            position: relative;
-            text-align: left;
-        }
-        .row-1::after{
-            content: attr(data-text);
-            background-color: #FF1654;
-            color: white;
-            border-radius: 16px;
-            padding: 0.5em 1em;
-            display: inline-block;
-            float: none;
-            text-align: center;
-            margin-top: 182px;
-            margin-left: 50px;
-        }
-        .row-2{
-            padding-top: 50px;
-        }
-    </style>
-    <body>
-    <div class="container-fluid">
-        <div class="row row-1 page-header" data-text="Maksym Gerashchenko">
-
-        </div>
-        <div class="row row-2">
-            <div class="container">
-                <div class="well text-center">
-                    <p>
-                        This is official website.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    </body>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Webpack + React</title>
+</head>
+<body></body>
+<script src="bundle.js"></script>
 </html>
