--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Webpack + React</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1">
+    <title>JS</title>
 </head>
 <body></body>
 <script src="bundle.js"></script>
