Add google Anlalytics and change label text.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1">
-    <title>JS</title>
+    <title>JS REACT WEBPACK</title>
 </head>
-<body></body>
-<script src="bundle.js"></script>
+    <body>
+        <script src="bundle.js"></script>
+    </body>
 </html>
