--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1">
+    <link rel="icon" type="image/png" href="img/favicon-96x96.png" sizes="96x96">
     <title>JS REACT WEBPACK</title>
     <!--google analytics-->
     <script>
